--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<span id="inputField"></span>
 		
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-		<script src="sketch.js"> </script>
+		<script src="sketch.min.js"> </script>
 		
 		<script src="terminal.js"> </script>
 		<script src="particles.js"> </script>
