made massive changes to the design

--- a/index.html
+++ b/index.html
@@ -10,17 +10,16 @@
 		<span id="terminalField"></span>
 		<span id="inputField"></span>
 		
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-		<script src="sketch.min.js"> </script>
-		
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>		
 		<script src="terminal.js"> </script>
-		<script src="particles.js"> </script>
 		<script>
-			setMaxLines(10);
-			printLine("Do an input", "red");
+			setMaxLines(15);
+			printLine("Do an input", "highlight");
 			addInputListener(function(line){
-				printLine("You: " + line, "white");
-				spawnParticles();
+				printLine("You: " + line, "color_two");
+				
+				if(line == "error" || line == "flag" || line == "highlight")
+					printLine(line, line);
 			});
 		</script>
 	</div>
