Updated the readme and index

--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <html>
-
 	<head>
-		<title>Board</title>
+		<title>Terminal</title>
 		<link rel="stylesheet" href="style.css" />
-		<link rel="stylesheet" href="updated.css" />
 	</head>
 
 	<body>
@@ -41,5 +39,4 @@
 			</script>
 		</div>
 	</body>
-
 </html>
